added hover animation

--- a/style.css
+++ b/style.css
@@ -60,6 +60,18 @@ h4{
 /* Global */
 
 /* transitions */
+body::-webkit-scrollbar {
+    width: 0.5rem;
+}
+
+body::-webkit-scrollbar-track {
+    background: white;
+}
+
+body::-webkit-scrollbar-thumb {
+    background: #0d213b;
+}
+
 .hidden {
     opacity: 0;
     filter: blur(4px);
@@ -106,6 +118,13 @@ header {
     font-weight: 400;
     padding-top: 0.5rem;
     margin-right: 2.4rem;
+    filter: grayscale(100%) opacity(0.7);
+    transform: 600ms;
+}
+
+.navbar a:hover {
+    filter: grayscale(0%) opacity(1);
+    color:#dd415a;
 }
 
 .navbar button {
@@ -118,6 +137,11 @@ header {
     border: none;
     color: white;
     background-color: #dd415a;
+    transform: 600ms;
+}
+
+.navbar button:hover {
+    box-shadow: 3px 3px 6px #dd415a;
 }
 /* Header */
 
@@ -174,6 +198,11 @@ header {
     align-content: center;
     border-radius: 5px;
     background-color: #dd415a;
+    transform: 600ms;
+}
+
+#img-bg-btn:hover {
+    box-shadow: 3px 3px 6px #dd415a;
 }
 /* Main */
 
@@ -193,6 +222,11 @@ header {
     border-radius: 5px;
     padding: 20px;
     box-shadow: 5px 5px 10px #bcbcbc;
+    transform: 600ms;
+}
+
+.centre-box div:hover{
+    box-shadow: 5px 5px 10px #dd415a;
 }
 
 .centre-box {
@@ -415,6 +449,11 @@ header {
     padding-left: 50px;
     padding-right: 50px;
     box-shadow: 5px 5px 10px #bcbcbc;
+    transform: 600ms;
+}
+
+#membership-cards div:hover{
+    box-shadow: 5px 5px 10px #dd415a;
 }
 
 #membership-cards div h2{
@@ -434,6 +473,11 @@ header {
     align-content: center;
     border-radius: 5px;
     box-shadow: 5px 5px 10px #bcbcbc;
+    transform: 600ms;
+}
+
+#membership-cards button:hover{
+    box-shadow: 5px 5px 10px #dd415a;
 }
 
 #membership-cards div h4{
@@ -485,6 +529,11 @@ footer{
     border-radius: 5px;
     color: white;
     background-color: #dd415a;
+    transform: 600ms;
+}
+
+#footer-btn:hover{
+    box-shadow: 5px 5px 10px #dd415a;
 }
 
 #footer-flex {
@@ -510,6 +559,11 @@ footer{
     padding: 1rem;
     align-content: center;
     color: white;
+    transform: 600ms;
+}
+
+.footer-down:hover{
+    box-shadow: 5px 5px 10px #dd415a;
 }
 
 #last {
