--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
+    list-style-type: none;;
 }
 
 .material-symbols-outlined {
@@ -104,6 +105,39 @@ header {
     align-items: center;
 }
 
+.sidebar{
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 250px;
+    z-index: 999;
+    background-color: white;
+    box-shadow: -10px 0 10px rgba(0,0,0,0.1);
+    display: none;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+
+.navbar li{
+    display: none;
+}
+
+.sidebar .navbar a {
+    display: block;
+    width: 100%;
+    filter: grayscale(100%) opacity(0.7);
+    transform: 600ms;
+}
+
+.sidebar .navbar button {
+    padding: 0.8rem;
+    margin-top: 30px;
+    margin-left: 0;
+    background-color: #dd415a;
+}
+
 .logo {
     font-size: 3rem;
     color: #dd415a;
@@ -189,6 +223,7 @@ header {
     border-radius: 5px;
     margin-right: 1.5rem;
     min-width: 20rem;
+    margin-bottom: 1.5rem;
 }
 
 #img-bg-btn {
@@ -213,7 +248,6 @@ header {
     justify-content: center;
     align-content: center;
     min-height: fit-content;
-    height: 100vh;
 }
 
 /* addresses both top and bottom */
@@ -386,7 +420,6 @@ header {
     max-height: 450px;
     margin-left: -120px;
     margin-right: -120px;
-
 }
 /* app screenshots */
 
@@ -523,7 +556,7 @@ footer{
 }
 
 #footer-btn {
-    padding: 10px;
+    padding: 5px;
     padding-left: 15px;
     padding-right: 15px;
     border-radius: 5px;
@@ -581,6 +614,210 @@ footer{
     margin-left: 50%;
 }
 /* footer */
+
+/* media queries */
+@media(max-width: 1360px){
+    .centre-box div{
+        padding: 10px;
+    }
+    
+    .centre-box {
+        padding-right: 30px;
+        padding-left: 30px;
+    }
+
+    .howitworks {
+        padding-right: 30px;
+        padding-left: 20px;
+    }
+    
+    .howitworks img{
+        height: 400px;
+        margin-left: -50px;
+    }
+    
+    .howitworks_text{
+        padding-left: 10px;
+    }
+    
+    #hiwtop {
+        padding-left: 10px;
+    }
+
+    .hiw-card {
+        max-width: 350px;
+    }
+
+    #subscribe p{
+        padding-left: 250px;
+        padding-right: 250px;
+        padding-top: 1.2rem;
+        color: white;
+        font-size: 0.8rem;
+    }
+}
+
+@media(max-width: 1234px){
+    .centre-box div{
+        padding: 5px;
+        margin: 20px;
+    }
+    
+    #centre-features-text {
+        padding: 40px;
+        padding-left: 120px;
+        padding-right: 120px;
+    }    
+
+    .centre-box {
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+
+    .centre-box {
+        flex-wrap: wrap;
+    }
+
+    .centre-features {
+        min-height: fit-content;
+    }
+
+    #mem-text p {
+        padding-left: 80px;
+        padding-right: 80px;
+    }
+    
+    #membership-cards div{
+        padding: 20px;
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+
+    #subscribe p{
+        padding-left: 190px;
+        padding-right: 190px;
+        padding-top: 1.2rem;
+        color: white;
+        font-size: 0.8rem;
+    }
+}
+
+@media(max-width: 1120px){
+    .hideOnMobile{
+        display: none;
+    }
+    .navbar li{
+        display: block;
+    }
+
+    .img-background .screenshot{
+        display: none;
+    }
+
+    .howitworks_text{
+        padding-left: 120px;
+    }
+
+    #app-ss-text {
+        padding-left: 120px;
+        padding-right: 120px;
+    }
+
+    .app-ss-imgcontainer img {
+        max-height: 250px;
+        margin-left: -120px;
+        margin-right: -120px;
+    }
+
+    .howitworks img{
+        height: 0px;
+    }
+
+    #mem-text p {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+
+    #membership-cards{
+        flex-wrap: wrap;
+    }
+    
+    #membership-cards div{
+        padding: 15px;
+        padding-left: 15px;
+        padding-right: 15px;
+        margin-bottom: 20px;
+    }
+
+    #subscribe p{
+        padding-left: 120px;
+        padding-right: 120px;
+    }
+
+    .footer-data{
+        padding-right: 20px;
+        padding-left: 20px;
+        font-size: 0.8rem;
+    }
+    
+}
+
+@media(max-width: 920px){
+    .hideOnMobile{
+        display: none;
+    }
+    .navbar li{
+        display: block;
+    }
+
+    .img-background {
+        padding-right: 100px;
+        padding-left: 100px;
+    }
+
+    #mem-text p {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .membership p{
+        padding-right: 40px;
+        padding-left: 40px;
+    }
+
+    #subscribe p{
+        padding-left: 60px;
+        padding-right: 60px;
+    }
+
+    #footer-flex{
+        flex-wrap: wrap;
+    }
+
+    #footer-flex div{
+        margin-bottom: 20px;
+    }
+}
+
+@media(max-width: 660px){
+    .img-background {
+        padding-right: 50px;
+        padding-left: 50px;
+    }
+
+    #subscribe p{
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+}
+
+@media(max-width: 420px){
+    .sidebar{
+        width: 100%;
+    }
+
+    
+}
 
 /* @media only screen and (max-width: 1400px){
 
