--- a/style.css
+++ b/style.css
@@ -607,6 +607,7 @@ footer{
     padding-bottom: 5px;
     background-color: #dd415a;
     justify-content: center;
+    font-size: 0.5rem;
 }
 
 .footer-hr {
@@ -871,7 +872,7 @@ footer{
 
 }
 
-@media(max-width: 420px){
+@media(max-width: 440px){
     .img-background {
         padding-right: 30px;
         padding-left: 30px;
@@ -887,11 +888,35 @@ footer{
 
     #email {
         margin-right: 0;
-        min-width: 18rem;
+        max-width: 18rem;
+    }
+
+    .centre-features{
+        padding: 25px;
+    }
+
+    .centre-box {
+        padding: 0px;
+    }
+
+    #hiwtop {
+        padding: 10px;
     }
 
     .howitworks_text{
         padding-left: 40px;
+    }
+
+    .overview{
+        height: 30vh;
+        padding-right: 20px;
+        padding-left: 20px;
+        font-size: 1.5rem;
+        padding: 10px;
+    }
+    
+    .overview .material-symbols-outlined{
+        font-size: 4rem;
     }
 
     .membership{
@@ -919,8 +944,154 @@ footer{
         padding-left: 30px;
         padding-right: 30px;
     }
+}
 
+@media(max-width: 400px){
+
+    h1{
+        font-size: 2.3em;
+    }
     
+    h2{
+        font-size: 2.0em;
+    }
+    
+    h3{
+        font-size: 1.7em;
+    }
+    
+    h4{
+        font-size: 1.4em;
+    }
+
+    .img-background {
+        padding-right: 150px;
+        padding-left: 15px;
+    }
+    
+    #img-bg-text {
+        padding-left: 0.7rem;
+    }
+    
+    #imgbgp {
+        width: 100%;
+    }
+
+    .centre-features{
+        padding: 12px;
+    }
+
+    .howitworks{
+        padding: 15px;
+    }
+
+    .howitworks_text{
+        padding: 0px;
+    }
+
+    .appscreenshots{
+        padding: 20px;
+    }
+
+    #subscribe{
+        padding: 0px;
+        padding-top: 20px;
+    }
+
+    #email {
+        margin-right: 0;
+        min-width: 15rem;
+    }
+
+    .howitworks {
+        justify-content: center;
+        padding: 40px;
+    }
+
+    .howitworks_text{
+        padding-left: 20px;
+    }
+
+    .membership{
+        padding-right: 12px;
+        padding-left: 12px;
+    }
+
+    #mem-text{
+        padding: 12px;
+    }
+
+    .sidebar{
+        width: 100%;
+    }
+
+    .sidebar li{
+        padding-left: 20px;
+    }
+
+    #app-ss-text {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+}
+
+@media(max-width: 330px){
+
+    .img-background {
+        padding-right: 150px;
+        padding-left: 15px;
+    }
+    
+    #img-bg-text {
+        padding-left: 0.7rem;
+    }
+    
+    #imgbgp {
+        width: 100%;
+    }
+
+    .howitworks{
+        padding: 15px;
+    }
+
+    .howitworks_text{
+        padding: 0px;
+    }
+
+    #email {
+        min-width: 10rem;
+    }
+
+    .howitworks {
+        justify-content: center;
+        padding: 40px;
+    }
+
+    .howitworks_text{
+        padding-left: 20px;
+    }
+
+    .membership{
+        padding-right: 12px;
+        padding-left: 12px;
+    }
+
+    #mem-text{
+        padding: 12px;
+    }
+
+    .sidebar{
+        width: 100%;
+    }
+
+    .sidebar li{
+        padding-left: 20px;
+    }
+
+    #app-ss-text {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
 }
 
 /* @media only screen and (max-width: 1400px){
