--- a/style.css
+++ b/style.css
@@ -1054,6 +1054,10 @@ footer{
         padding: 15px;
     }
 
+    .centre-features{
+        padding: 4px;
+    }
+
     .howitworks_text{
         padding: 0px;
     }
